--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -5,7 +5,7 @@
    "id": "bf5e9290",
    "metadata": {},
    "source": [
-    "# Working with CoolProp in Cantera\n",
+    "# Working with CoolProp in Cantera"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "e2d9f216",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d5a9627a",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "28bf4dc3-46be-485e-b0dc-ab12edc2da06",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "29.43805497002353"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "b1fc8168-22c6-4218-8b7f-d2a27d7c03c8",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "29.388071132483976"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "8bdc4004",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "29.435286558400477"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "4ebcce1e",
    "metadata": {},
    "outputs": [
@@ -239,17 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "33440c9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x771ee8056ba0>"
+       "<matplotlib.legend.Legend at 0x7e1504499010>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
