--- a/Single Species Thermodynamics/Basic_Properties_with_EOS_variation.ipynb
+++ b/Single Species Thermodynamics/Basic_Properties_with_EOS_variation.ipynb
@@ -2777,7 +2777,7 @@
     "ax.plot(CO2_ref['Pressure (atm)'], CO2_ref['Adjusted Internal Energy'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=[1, 20, 40, 60, 66, 67, 80, 100, 120, 140, 160, 180, 200, 220, 240, 260, 280, 300]) #Includes values near phase transition, 66.253atm\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/CO2/u-P Graph of CO2.svg\")\n",
+    "plt.savefig(\"Graphs/CO2/u-P Graph of CO2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -4426,7 +4426,7 @@
     "ax.plot(CO2_ref['Pressure (atm)'], CO2_ref['Adjusted Enthalpy'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=[1, 20, 40, 60, 66, 67, 80, 100, 120, 140, 160, 180, 200, 220, 240, 260, 280, 300])\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/CO2/h-P Graph of CO2.svg\")\n",
+    "plt.savefig(\"Graphs/CO2/h-P Graph of CO2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -6163,7 +6163,7 @@
     "ax.plot(CO2_ref['Pressure (atm)'], CO2_ref['Adjusted Entropy'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=[1, 20, 40, 60, 66, 67, 80, 100, 120, 140, 160, 180, 200, 220, 240, 260, 280, 300])\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/CO2/s-P Graph of CO2.svg\")\n",
+    "plt.savefig(\"Graphs/CO2/s-P Graph of CO2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -7953,7 +7953,7 @@
     "ax.plot(CO2_ref['Pressure (atm)'], CO2_ref['Cp (J/g*K)'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=[1, 20, 40, 60, 66, 67, 80, 100, 120, 140, 160, 180, 200, 220, 240, 260, 280, 300])\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/CO2/cp-P Graph of CO2.svg\")\n",
+    "plt.savefig(\"Graphs/CO2/cp-P Graph of CO2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -9659,7 +9659,7 @@
     "ax.plot(CO2_ref['Pressure (atm)'], CO2_ref['Cv (J/g*K)'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=[1, 20, 40, 60, 66, 67, 80, 100, 120, 140, 160, 180, 200, 220, 240, 260, 280, 300])\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/CO2/cv-P Graph of CO2.svg\")\n",
+    "plt.savefig(\"Graphs/CO2/cv-P Graph of CO2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -11349,7 +11349,7 @@
     "ax.plot(CO2_ref['Pressure (atm)'], CO2_ref['Density (kg/m3)'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=[1, 20, 40, 60, 66, 67, 80, 100, 120, 140, 160, 180, 200, 220, 240, 260, 280, 300])\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/CO2/rho-P Graph of CO2.svg\")\n",
+    "plt.savefig(\"Graphs/CO2/rho-P Graph of CO2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -13066,7 +13066,7 @@
     "ax.plot(H2_ref['Pressure (atm)'], H2_ref['Adjusted Internal Energy'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=20)\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/H2/u-P Graph of H2.svg\")\n",
+    "plt.savefig(\"Graphs/H2/u-P Graph of H2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -14651,7 +14651,7 @@
     "ax.plot(H2_ref['Pressure (atm)'], H2_ref['Adjusted Enthalpy'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=20)\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/H2/h-P Graph of H2.svg\")\n",
+    "plt.savefig(\"Graphs/H2/h-P Graph of H2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -16302,7 +16302,7 @@
     "ax.plot(H2_ref['Pressure (atm)'], H2_ref['Adjusted Entropy'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=20)\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/H2/s-P Graph of H2.svg\")\n",
+    "plt.savefig(\"Graphs/H2/s-P Graph of H2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -17948,7 +17948,7 @@
     "ax.plot(H2_ref['Pressure (atm)'], H2_ref['Cp (J/g*K)'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=20)\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/H2/cp-P Graph of H2.svg\")\n",
+    "plt.savefig(\"Graphs/H2/cp-P Graph of H2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -19480,7 +19480,7 @@
     "ax.plot(H2_ref['Pressure (atm)'], H2_ref['Cv (J/g*K)'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=20)\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/H2/cv-P Graph of H2.svg\")\n",
+    "plt.savefig(\"Graphs/H2/cv-P Graph of H2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -20931,7 +20931,7 @@
     "ax.plot(H2_ref['Pressure (atm)'], H2_ref['Density (kg/m3)'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=20)\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/H2/rho-P Graph of H2.svg\")\n",
+    "plt.savefig(\"Graphs/H2/rho-P Graph of H2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -22506,7 +22506,7 @@
     "ax.plot(H2_ref_T['Temperature (K)'], H2_ref_T['Adjusted Internal Energy'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=14)\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/H2/u-T Graph of H2.svg\")\n",
+    "plt.savefig(\"Graphs/H2/u-T Graph of H2.svg\")\n",
     "plt.show()"
    ]
   },
@@ -24133,7 +24133,7 @@
     "ax.plot(CO2_ref_T['Temperature (K)'], CO2_ref_T['Cv (J/g*K)'], \" \", label=\"NIST Reference\", color=\"brown\", marker=\"o\", \n",
     "        markevery=16)\n",
     "ax.legend(prop={\"size\": 11}, frameon=False)\n",
-    "plt.savefig(\"Graphs/Single Species/CO2/cv-T Graph of CO2.svg\")\n",
+    "plt.savefig(\"Graphs/CO2/cv-T Graph of CO2.svg\")\n",
     "plt.show()"
    ]
   },
