Updated Law Replication

--- a/Single Species Thermodynamics/Basic_Properties_with_EOS_variation.ipynb
+++ b/Single Species Thermodynamics/Basic_Properties_with_EOS_variation.ipynb
@@ -231,7 +231,7 @@
     "CoolProps Cubic EOSs present an additional challenge: \\\n",
     "For Case 1, the CPs PR EOSs is unstable near the phase Transition region. \\\n",
     "For Case 2, due to our chosen pressure level (100atm), both the SRK and PR Backends start throwing errors at low as well as high Temperatures. \\\n",
-    "The remedy to this is either providing a density guess (working with rhoT instead of pT), or specifying the phase of the Fluid. \\\n",
+    "The remedy to this is either working with rhoT instead of pT, or specifying the phase of the Fluid. \\\n",
     "We will go with the former, and write our backend functions to use density guesses like this:"
    ]
   },
