Renamed Folder To Highlight Structure

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eafeeb15-46db-49d8-afaa-2b6de2997b59",
+   "metadata": {},
+   "source": [
+    "This Script assumes the user is familiar with Cantera.\n",
+    "\n",
+    "Based on this knowledge, it highlights the differences between Cantera and CoolProps python interface."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24c157cc",
    "metadata": {},
    "source": [
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "e2d9f216",
    "metadata": {},
    "outputs": [],
@@ -39,7 +49,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Additionally we import the high-level CoolProp interface, PropsSI\n",
+    "# As well as CoolProp as CP to get the low-level interface\n",
     "# NOTE: Will error out if CoolProp is not installed!\n",
+    "import CoolProp as CP\n",
     "from CoolProp.CoolProp import PropsSI"
    ]
   },
@@ -53,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "d5a9627a",
    "metadata": {},
    "outputs": [],
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "28bf4dc3-46be-485e-b0dc-ab12edc2da06",
    "metadata": {},
    "outputs": [
@@ -85,7 +97,7 @@
        "29.43805497002353"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "b1fc8168-22c6-4218-8b7f-d2a27d7c03c8",
    "metadata": {},
    "outputs": [
@@ -110,7 +122,7 @@
        "29.388071132483976"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +134,7 @@
     "#composite phase Objects need to specify which Fluid we're working with\n",
     "O2 = gas.species(gas.species_index('O2'))\n",
     "\n",
-    "# Then perform the Calculations for that single Fluid\n",
+    "# Then Extract the value were looking for\n",
     "O2.thermo.cp (300) / 1000 # kJ/kmol/K"
    ]
   },
@@ -136,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "8bdc4004",
    "metadata": {},
    "outputs": [
@@ -146,7 +158,7 @@
        "29.435286558400477"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,6 +167,42 @@
     "PropsSI(\"CPMOLAR\", \"P\", 101325, \"T\", 300, \"O2\")\n",
     "#We query the specific molar heat at constant pressure \"CPMOLAR\",\n",
     "#at a Pressure \"P\" of 101325 Pa and Temperature \"T\" of 300K for the species \"O2\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f244d43e-be0c-4302-a687-8486c7cc407f",
+   "metadata": {},
+   "source": [
+    "CoolProp also provide a low level interface through its AbstractState Objects, which works quite similarly to Cantera:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8cfcfdc3-ec74-48fa-88dc-4f5801c46e48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.435286558400477"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# First create an AbstractState instance for O2 using the \"HEOS\" (Default) backend\n",
+    "AS = CP.AbstractState(\"HEOS\", \"O2\")\n",
+    "\n",
+    "# Update/Set the state by feeding it with our Pressure and Temperature\n",
+    "AS.update(CP.PT_INPUTS, 101325, 300)\n",
+    "\n",
+    "# Get the molar specific heat at constant pressure [J/mol/K]\n",
+    "AS.cpmolar()"
    ]
   },
   {
@@ -178,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "4ebcce1e",
    "metadata": {},
    "outputs": [
@@ -228,7 +276,7 @@
     "    cp_m=O2.thermo.cp(T)/1000 # kJ/kmol/K\n",
     "    cp_m_O2Composite_list.append(cp_m)\n",
     "\n",
-    "#Collprop O2\n",
+    "#Coolprop O2\n",
     "for T in T_list:\n",
     "    cp_m=PropsSI(\"CPMOLAR\", \"P\", 101325, \"T\", T, \"O2\") # kJ/kmol/K\n",
     "    cp_m_O2CoolProp_list.append(cp_m)\n",
@@ -239,17 +287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "33440c9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7e1504499010>"
+       "<matplotlib.legend.Legend at 0x7353371a8ec0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
